[project]
name = "ultimate-openpose-render"
description = "The ultimate openpose render node for ComfyUI with flexible input, output and adjustment."
version = "0.9.1"
license = { file = "LICENSE"}

[project.urls]
Repository = "https://github.com/westNeighbor/ComfyUI-openpose-render"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "west-neighbor"
DisplayName = "ComfyUI-ultimate-openpose-render"
Icon = ""
