[project]
name = "ComfyUI-ultimate-openpose-render"
description = "The ultimate openpose render node for ComfyUI with flexible input, output and adjustment."
version = "1.1.0"
license = { file = "LICENSE"}
dependencies = ["torch", "polygraphy", "numpy", "opencv-python", "matplotlib"]

[project.urls]
Repository = "https://github.com/westNeighbor/ComfyUI-openpose-render"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "west-neighbor"
DisplayName = "ComfyUI-ultimate-openpose-render"
Icon = ""
